@startuml
' ====== Style (optional) ======
hide circle
skinparam linetype ortho

' ====== ENTITIES ======

entity "users" as users {
  * id : uuid <<PK>>
  --
  email : text <<UQ>>
  password_hash : text
  full_name : text
  timezone : text
  role : text  ' mentee / mentor / both / admin
  created_at : timestamptz
}

entity "mentor_profiles" as mentor_profiles {
  * user_id : uuid <<PK, FK>>
  --
  headline : text
  bio : text
  languages : text[]
  timezone : text
  is_active : bool
  rating_avg : numeric
  rating_count : int
}

entity "mentee_profiles" as mentee_profiles {
  * user_id : uuid <<PK, FK>>
  --
  background : text
  goals : text
  interests : text[]
}

entity "topics" as topics {
  * id : uuid <<PK>>
  --
  name : text <<UQ>>
}

entity "mentor_topics" as mentor_topics {
  * mentor_id : uuid <<PK, FK>>
  * topic_id : uuid <<PK, FK>>
}

entity "mentor_services" as mentor_services {
  * id : uuid <<PK>>
  --
  mentor_id : uuid <<FK>>
  title : text
  duration_min : int
  price_amount : numeric
  currency : text
  is_active : bool
}

entity "availability_rules" as availability_rules {
  * id : uuid <<PK>>
  --
  mentor_id : uuid <<FK>>
  weekday : int  ' 1-7
  start_time : time
  end_time : time
  timezone : text
}

entity "availability_exceptions" as availability_exceptions {
  * id : uuid <<PK>>
  --
  mentor_id : uuid <<FK>>
  date : date
  is_available : bool
  note : text
}

entity "slots" as slots {
  * id : uuid <<PK>>
  --
  mentor_id : uuid <<FK>>
  start_at : timestamptz
  end_at : timestamptz
  status : text  ' free/held/booked
  held_until : timestamptz
}

entity "sessions" as sessions {
  * id : uuid <<PK>>
  --
  mentor_id : uuid <<FK>>
  mentee_id : uuid <<FK>>
  service_id : uuid <<FK>>
  slot_id : uuid <<FK>>
  status : text  ' requested/booked/paid/canceled/completed/no_show
  start_at : timestamptz
  end_at : timestamptz
  created_at : timestamptz
  canceled_at : timestamptz
  cancel_reason : text
}

entity "payments" as payments {
  * id : uuid <<PK>>
  --
  session_id : uuid <<FK>>
  provider : text
  amount : numeric
  currency : text
  status : text  ' pending/paid/failed/refunded
  provider_payment_id : text
  created_at : timestamptz
}

entity "payouts" as payouts {
  * id : uuid <<PK>>
  --
  mentor_id : uuid <<FK>>
  amount : numeric
  currency : text
  status : text  ' pending/paid/failed
  created_at : timestamptz
}

entity "conversations" as conversations {
  * id : uuid <<PK>>
  --
  mentor_id : uuid <<FK>>
  mentee_id : uuid <<FK>>
  session_id : uuid <<FK>>  ' nullable if общий чат
  created_at : timestamptz
}

entity "messages" as messages {
  * id : uuid <<PK>>
  --
  conversation_id : uuid <<FK>>
  sender_id : uuid <<FK>>
  body : text
  created_at : timestamptz
  read_at : timestamptz
}

entity "attachments" as attachments {
  * id : uuid <<PK>>
  --
  message_id : uuid <<FK>>
  url : text
  mime_type : text
  size_bytes : bigint
}

entity "video_rooms" as video_rooms {
  * id : uuid <<PK>>
  --
  session_id : uuid <<FK>>
  provider : text
  room_id : text
  join_url_mentee : text
  join_url_mentor : text
  recording_url : text
  created_at : timestamptz
}

entity "session_notes" as session_notes {
  * id : uuid <<PK>>
  --
  session_id : uuid <<FK>>
  mentor_id : uuid <<FK>>
  private_notes : text
  shared_summary : text
  updated_at : timestamptz
}

entity "reviews" as reviews {
  * id : uuid <<PK>>
  --
  session_id : uuid <<FK>>
  mentee_id : uuid <<FK>>
  mentor_id : uuid <<FK>>
  rating : int
  text : text
  created_at : timestamptz
}

entity "notifications" as notifications {
  * id : uuid <<PK>>
  --
  user_id : uuid <<FK>>
  type : text
  payload_json : jsonb
  created_at : timestamptz
  read_at : timestamptz
}

' ====== RELATIONSHIPS ======

users ||--o| mentor_profiles : "has"
users ||--o| mentee_profiles : "has"

mentor_profiles ||--o{ mentor_topics : "maps"
topics ||--o{ mentor_topics : "maps"

users ||--o{ mentor_services : "mentor provides"
users ||--o{ availability_rules : "mentor sets"
users ||--o{ availability_exceptions : "mentor sets"
users ||--o{ slots : "mentor owns"

slots ||--o| sessions : "booked_for"
mentor_services ||--o{ sessions : "chosen_service"

users ||--o{ sessions : "mentor"
users ||--o{ sessions : "mentee"

sessions ||--o{ payments : "paid_by"
users ||--o{ payouts : "mentor receives"

sessions ||--o| video_rooms : "has"

sessions ||--o{ session_notes : "notes"
users ||--o{ session_notes : "writes"

conversations ||--o{ messages : "contains"
users ||--o{ messages : "sends"
messages ||--o{ attachments : "has"

sessions ||--o| conversations : "chat_for"

sessions ||--o| reviews : "review_for"
users ||--o{ reviews : "mentee writes"
users ||--o{ reviews : "mentor receives"

users ||--o{ notifications : "gets"

@enduml
